--- a/templates/main.hbs
+++ b/templates/main.hbs
@@ -5,17 +5,199 @@
     <article class="blog-post">
         {{#with page.head}}
         <h1 class="blog-post-title border-bottom">{{title}}</h2>
-            <p class="blog-post-meta">{{#if extra.date}}Published: {{extra.date}}{{/if}}</p>
+           <div class="helpText col-12">
+				<p id="first">{{description}}</p>
+			</div>
             {{/with}}
-            {{! Since this is HTML, we use the triple-curly }}
-            {{{page.body}}}
-            {{! Remove the `!` on the line below to see how to call a Rhai script }}
-            {{! echo "world" }}
+          
+<br>
+  <div class="col-xs-2">
+
+				<input class="form-control" id="userInput" type="text" placeholder="Add a task here..." maxlength="27" style="height: 40px;">
+			       <br>
+				   <p align="right">
+				<button id="enter" style="border-radius: 0px;"> Add a task</button>
+		</p>
+		</div>
+   	</div>
+	
+
+		<!-- Empty List -->
+
+			<div class="col-md-8">
+				<p align="left">
+				<ul class="">
+				</ul>
+				</p>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<script type="text/javascript" src="script_method3.js"></script>
+
     </article>
 </div><!-- end col -->
 
-{{! This adds the sidebar }}
-{{> content_sidebar }}
+<style>
+    body {
+	}
+.intro {
+	margin: 30px 0px;
+	font-weight: bold;
+}
 
+h1 {
+	color: #000;
+	font-weight: 800;
+}
+
+p {
+	font-weight: 600;
+}
+
+#first {
+	margin-top: 10px;
+	color: #000;
+}
+#enter {
+	border: none;
+	padding: 5px 15px;
+	border-radius: 5px;
+	color: #FFF;
+	background-color: #000;
+	transition: all 0.75s ease;
+	-webkit-transition: all 0.75s ease;
+	-moz-transition: all 0.75s ease;
+	-ms-transition: all 0.75s ease;
+	-o-transition: all 0.75 ease;
+	font-weight: normal;
+}
+
+#enter:hover{
+	background-color: #fff;
+	color: #000;
+    border: solid 0.6px;
+}
+
+ul {
+	text-align: left;
+	margin-top: 20px;
+}
+
+
+li {
+	list-style: none;
+	padding: 10px 20px;
+	color: #ffffff;
+	text-transform: capitalize;
+	font-weight: 600;
+	border: 2px solid #000;
+	border-radius: 5px;
+	margin-bottom: 10px;
+	background: #000;
+	transition: all 0.75s ease;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	-o-transition: all 0.5 ease;
+}
+
+li:hover {
+	background: #000;
+}
+
+li > button {
+	font-weight: normal;
+	background: none;
+	border: none;
+	float: right;
+	color: #fff;
+	font-weight: 800;
+}
+
+input {
+	border-radius:0px;
+	min-width: 50%;
+	padding: 5px;
+	height: 25px;
+}
+
+
+.done {
+	background: green !important;
+	color: #fff;
+}
+
+.delete {
+	display: none;
+}
+</style>
+
+<script>
+    var enterButton = document.getElementById("enter");
+var input = document.getElementById("userInput");
+var ul = document.querySelector("ul");
+var item = document.getElementsByTagName("li");
+
+function inputLength(){
+	return input.value.length;
+} 
+
+function listLength(){
+	return item.length;
+}
+
+function createListElement() {
+	var li = document.createElement("li"); // creates an element "li"
+	li.appendChild(document.createTextNode(input.value)); //makes text from input field the li text
+	ul.appendChild(li); //adds li to ul
+	input.value = ""; //Reset text input field
+
+
+	//START STRIKETHROUGH
+	// because it's in the function, it only adds it for new items
+	function crossOut() {
+		li.classList.toggle("done");
+	}
+
+	li.addEventListener("click",crossOut);
+	//END STRIKETHROUGH
+
+
+	// START ADD DELETE BUTTON
+	var dBtn = document.createElement("button");
+	dBtn.appendChild(document.createTextNode("X"));
+	li.appendChild(dBtn);
+	dBtn.addEventListener("click", deleteListItem);
+	// END ADD DELETE BUTTON
+
+
+	//ADD CLASS DELETE (DISPLAY: NONE)
+	function deleteListItem(){
+		li.classList.add("delete")
+	}
+	//END ADD CLASS DELETE
+}
+
+
+function addListAfterClick(){
+	if (inputLength() > 0) { //makes sure that an empty input field doesn't create a li
+		createListElement();
+	}
+}
+
+function addListAfterKeypress(event) {
+	if (inputLength() > 0 && event.which ===13) { //this now looks to see if you hit "enter"/"return"
+		//the 13 is the enter key's keycode, this could also be display by event.keyCode === 13
+		createListElement();
+	} 
+}
+
+
+enterButton.addEventListener("click",addListAfterClick);
+
+input.addEventListener("keypress", addListAfterKeypress);
+</script>
 {{! This closes the body. See content_bottom.hbs. }}
 {{> content_bottom }}
